// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PoseSkeletonOverlay snapshots > renders with connections only (no keypoints) 1`] = `
<svg
  class="pointer-events-none absolute inset-0 h-full w-full"
  data-testid="pose-skeleton-overlay"
  preserveAspectRatio="none"
  style="z-index: 20;"
  viewBox="0 0 400 400"
>
  <line
    data-testid="pose-connection-0-1"
    opacity="0.9"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="100"
    x2="90"
    y1="50"
    y2="45"
  />
  <line
    data-testid="pose-connection-0-2"
    opacity="0.9"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="100"
    x2="110"
    y1="50"
    y2="45"
  />
  <line
    data-testid="pose-connection-1-3"
    opacity="0.85"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="90"
    x2="80"
    y1="45"
    y2="50"
  />
  <line
    data-testid="pose-connection-2-4"
    opacity="0.85"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="110"
    x2="120"
    y1="45"
    y2="50"
  />
  <line
    data-testid="pose-connection-5-6"
    opacity="0.92"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="130"
    y1="100"
    y2="100"
  />
  <line
    data-testid="pose-connection-5-11"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="80"
    y1="100"
    y2="180"
  />
  <line
    data-testid="pose-connection-6-12"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="130"
    x2="120"
    y1="100"
    y2="180"
  />
  <line
    data-testid="pose-connection-11-12"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="80"
    x2="120"
    y1="180"
    y2="180"
  />
  <line
    data-testid="pose-connection-5-7"
    opacity="0.88"
    stroke="#3b82f6"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="60"
    y1="100"
    y2="150"
  />
  <line
    data-testid="pose-connection-7-9"
    opacity="0.82"
    stroke="#3b82f6"
    stroke-linecap="round"
    stroke-width="2"
    x1="60"
    x2="50"
    y1="150"
    y2="200"
  />
  <line
    data-testid="pose-connection-6-8"
    opacity="0.88"
    stroke="#8b5cf6"
    stroke-linecap="round"
    stroke-width="2"
    x1="130"
    x2="140"
    y1="100"
    y2="150"
  />
  <line
    data-testid="pose-connection-8-10"
    opacity="0.82"
    stroke="#8b5cf6"
    stroke-linecap="round"
    stroke-width="2"
    x1="140"
    x2="150"
    y1="150"
    y2="200"
  />
  <line
    data-testid="pose-connection-11-13"
    opacity="0.85"
    stroke="#ef4444"
    stroke-linecap="round"
    stroke-width="2"
    x1="80"
    x2="75"
    y1="180"
    y2="250"
  />
  <line
    data-testid="pose-connection-13-15"
    opacity="0.8"
    stroke="#ef4444"
    stroke-linecap="round"
    stroke-width="2"
    x1="75"
    x2="70"
    y1="250"
    y2="320"
  />
  <line
    data-testid="pose-connection-12-14"
    opacity="0.85"
    stroke="#f97316"
    stroke-linecap="round"
    stroke-width="2"
    x1="120"
    x2="125"
    y1="180"
    y2="250"
  />
  <line
    data-testid="pose-connection-14-16"
    opacity="0.8"
    stroke="#f97316"
    stroke-linecap="round"
    stroke-width="2"
    x1="125"
    x2="130"
    y1="250"
    y2="320"
  />
</svg>
`;

exports[`PoseSkeletonOverlay snapshots > renders with custom styling 1`] = `
<svg
  class="pointer-events-none absolute inset-0 h-full w-full"
  data-testid="pose-skeleton-overlay"
  preserveAspectRatio="none"
  style="z-index: 20;"
  viewBox="0 0 400 400"
>
  <line
    data-testid="pose-connection-0-1"
    opacity="0.9"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="4"
    x1="100"
    x2="90"
    y1="50"
    y2="45"
  />
  <line
    data-testid="pose-connection-0-2"
    opacity="0.9"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="4"
    x1="100"
    x2="110"
    y1="50"
    y2="45"
  />
  <line
    data-testid="pose-connection-1-3"
    opacity="0.85"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="4"
    x1="90"
    x2="80"
    y1="45"
    y2="50"
  />
  <line
    data-testid="pose-connection-2-4"
    opacity="0.85"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="4"
    x1="110"
    x2="120"
    y1="45"
    y2="50"
  />
  <line
    data-testid="pose-connection-5-6"
    opacity="0.92"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="4"
    x1="70"
    x2="130"
    y1="100"
    y2="100"
  />
  <line
    data-testid="pose-connection-5-11"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="4"
    x1="70"
    x2="80"
    y1="100"
    y2="180"
  />
  <line
    data-testid="pose-connection-6-12"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="4"
    x1="130"
    x2="120"
    y1="100"
    y2="180"
  />
  <line
    data-testid="pose-connection-11-12"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="4"
    x1="80"
    x2="120"
    y1="180"
    y2="180"
  />
  <line
    data-testid="pose-connection-5-7"
    opacity="0.88"
    stroke="#3b82f6"
    stroke-linecap="round"
    stroke-width="4"
    x1="70"
    x2="60"
    y1="100"
    y2="150"
  />
  <line
    data-testid="pose-connection-7-9"
    opacity="0.82"
    stroke="#3b82f6"
    stroke-linecap="round"
    stroke-width="4"
    x1="60"
    x2="50"
    y1="150"
    y2="200"
  />
  <line
    data-testid="pose-connection-6-8"
    opacity="0.88"
    stroke="#8b5cf6"
    stroke-linecap="round"
    stroke-width="4"
    x1="130"
    x2="140"
    y1="100"
    y2="150"
  />
  <line
    data-testid="pose-connection-8-10"
    opacity="0.82"
    stroke="#8b5cf6"
    stroke-linecap="round"
    stroke-width="4"
    x1="140"
    x2="150"
    y1="150"
    y2="200"
  />
  <line
    data-testid="pose-connection-11-13"
    opacity="0.85"
    stroke="#ef4444"
    stroke-linecap="round"
    stroke-width="4"
    x1="80"
    x2="75"
    y1="180"
    y2="250"
  />
  <line
    data-testid="pose-connection-13-15"
    opacity="0.8"
    stroke="#ef4444"
    stroke-linecap="round"
    stroke-width="4"
    x1="75"
    x2="70"
    y1="250"
    y2="320"
  />
  <line
    data-testid="pose-connection-12-14"
    opacity="0.85"
    stroke="#f97316"
    stroke-linecap="round"
    stroke-width="4"
    x1="120"
    x2="125"
    y1="180"
    y2="250"
  />
  <line
    data-testid="pose-connection-14-16"
    opacity="0.8"
    stroke="#f97316"
    stroke-linecap="round"
    stroke-width="4"
    x1="125"
    x2="130"
    y1="250"
    y2="320"
  />
  <circle
    cx="100"
    cy="50"
    data-testid="pose-keypoint-0"
    fill="#22c55e"
    opacity="0.95"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="90"
    cy="45"
    data-testid="pose-keypoint-1"
    fill="#22c55e"
    opacity="0.9"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="110"
    cy="45"
    data-testid="pose-keypoint-2"
    fill="#22c55e"
    opacity="0.9"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="80"
    cy="50"
    data-testid="pose-keypoint-3"
    fill="#22c55e"
    opacity="0.85"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="120"
    cy="50"
    data-testid="pose-keypoint-4"
    fill="#22c55e"
    opacity="0.85"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="70"
    cy="100"
    data-testid="pose-keypoint-5"
    fill="#eab308"
    opacity="0.92"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="130"
    cy="100"
    data-testid="pose-keypoint-6"
    fill="#eab308"
    opacity="0.92"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="60"
    cy="150"
    data-testid="pose-keypoint-7"
    fill="#3b82f6"
    opacity="0.88"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="140"
    cy="150"
    data-testid="pose-keypoint-8"
    fill="#8b5cf6"
    opacity="0.88"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="50"
    cy="200"
    data-testid="pose-keypoint-9"
    fill="#3b82f6"
    opacity="0.82"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="150"
    cy="200"
    data-testid="pose-keypoint-10"
    fill="#8b5cf6"
    opacity="0.82"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="80"
    cy="180"
    data-testid="pose-keypoint-11"
    fill="#eab308"
    opacity="0.9"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="120"
    cy="180"
    data-testid="pose-keypoint-12"
    fill="#eab308"
    opacity="0.9"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="75"
    cy="250"
    data-testid="pose-keypoint-13"
    fill="#ef4444"
    opacity="0.85"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="125"
    cy="250"
    data-testid="pose-keypoint-14"
    fill="#f97316"
    opacity="0.85"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="70"
    cy="320"
    data-testid="pose-keypoint-15"
    fill="#ef4444"
    opacity="0.8"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="130"
    cy="320"
    data-testid="pose-keypoint-16"
    fill="#f97316"
    opacity="0.8"
    r="8"
    stroke="#ffffff"
    stroke-width="1"
  />
</svg>
`;

exports[`PoseSkeletonOverlay snapshots > renders with default props 1`] = `
<svg
  class="pointer-events-none absolute inset-0 h-full w-full"
  data-testid="pose-skeleton-overlay"
  preserveAspectRatio="none"
  style="z-index: 20;"
  viewBox="0 0 400 400"
>
  <line
    data-testid="pose-connection-0-1"
    opacity="0.9"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="100"
    x2="90"
    y1="50"
    y2="45"
  />
  <line
    data-testid="pose-connection-0-2"
    opacity="0.9"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="100"
    x2="110"
    y1="50"
    y2="45"
  />
  <line
    data-testid="pose-connection-1-3"
    opacity="0.85"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="90"
    x2="80"
    y1="45"
    y2="50"
  />
  <line
    data-testid="pose-connection-2-4"
    opacity="0.85"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="110"
    x2="120"
    y1="45"
    y2="50"
  />
  <line
    data-testid="pose-connection-5-6"
    opacity="0.92"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="130"
    y1="100"
    y2="100"
  />
  <line
    data-testid="pose-connection-5-11"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="80"
    y1="100"
    y2="180"
  />
  <line
    data-testid="pose-connection-6-12"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="130"
    x2="120"
    y1="100"
    y2="180"
  />
  <line
    data-testid="pose-connection-11-12"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="80"
    x2="120"
    y1="180"
    y2="180"
  />
  <line
    data-testid="pose-connection-5-7"
    opacity="0.88"
    stroke="#3b82f6"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="60"
    y1="100"
    y2="150"
  />
  <line
    data-testid="pose-connection-7-9"
    opacity="0.82"
    stroke="#3b82f6"
    stroke-linecap="round"
    stroke-width="2"
    x1="60"
    x2="50"
    y1="150"
    y2="200"
  />
  <line
    data-testid="pose-connection-6-8"
    opacity="0.88"
    stroke="#8b5cf6"
    stroke-linecap="round"
    stroke-width="2"
    x1="130"
    x2="140"
    y1="100"
    y2="150"
  />
  <line
    data-testid="pose-connection-8-10"
    opacity="0.82"
    stroke="#8b5cf6"
    stroke-linecap="round"
    stroke-width="2"
    x1="140"
    x2="150"
    y1="150"
    y2="200"
  />
  <line
    data-testid="pose-connection-11-13"
    opacity="0.85"
    stroke="#ef4444"
    stroke-linecap="round"
    stroke-width="2"
    x1="80"
    x2="75"
    y1="180"
    y2="250"
  />
  <line
    data-testid="pose-connection-13-15"
    opacity="0.8"
    stroke="#ef4444"
    stroke-linecap="round"
    stroke-width="2"
    x1="75"
    x2="70"
    y1="250"
    y2="320"
  />
  <line
    data-testid="pose-connection-12-14"
    opacity="0.85"
    stroke="#f97316"
    stroke-linecap="round"
    stroke-width="2"
    x1="120"
    x2="125"
    y1="180"
    y2="250"
  />
  <line
    data-testid="pose-connection-14-16"
    opacity="0.8"
    stroke="#f97316"
    stroke-linecap="round"
    stroke-width="2"
    x1="125"
    x2="130"
    y1="250"
    y2="320"
  />
  <circle
    cx="100"
    cy="50"
    data-testid="pose-keypoint-0"
    fill="#22c55e"
    opacity="0.95"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="90"
    cy="45"
    data-testid="pose-keypoint-1"
    fill="#22c55e"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="110"
    cy="45"
    data-testid="pose-keypoint-2"
    fill="#22c55e"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="80"
    cy="50"
    data-testid="pose-keypoint-3"
    fill="#22c55e"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="120"
    cy="50"
    data-testid="pose-keypoint-4"
    fill="#22c55e"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="70"
    cy="100"
    data-testid="pose-keypoint-5"
    fill="#eab308"
    opacity="0.92"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="130"
    cy="100"
    data-testid="pose-keypoint-6"
    fill="#eab308"
    opacity="0.92"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="60"
    cy="150"
    data-testid="pose-keypoint-7"
    fill="#3b82f6"
    opacity="0.88"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="140"
    cy="150"
    data-testid="pose-keypoint-8"
    fill="#8b5cf6"
    opacity="0.88"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="50"
    cy="200"
    data-testid="pose-keypoint-9"
    fill="#3b82f6"
    opacity="0.82"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="150"
    cy="200"
    data-testid="pose-keypoint-10"
    fill="#8b5cf6"
    opacity="0.82"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="80"
    cy="180"
    data-testid="pose-keypoint-11"
    fill="#eab308"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="120"
    cy="180"
    data-testid="pose-keypoint-12"
    fill="#eab308"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="75"
    cy="250"
    data-testid="pose-keypoint-13"
    fill="#ef4444"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="125"
    cy="250"
    data-testid="pose-keypoint-14"
    fill="#f97316"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="70"
    cy="320"
    data-testid="pose-keypoint-15"
    fill="#ef4444"
    opacity="0.8"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="130"
    cy="320"
    data-testid="pose-keypoint-16"
    fill="#f97316"
    opacity="0.8"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
</svg>
`;

exports[`PoseSkeletonOverlay snapshots > renders with different image dimensions 1`] = `
<svg
  class="pointer-events-none absolute inset-0 h-full w-full"
  data-testid="pose-skeleton-overlay"
  preserveAspectRatio="none"
  style="z-index: 20;"
  viewBox="0 0 1920 1080"
>
  <line
    data-testid="pose-connection-0-1"
    opacity="0.9"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="100"
    x2="90"
    y1="50"
    y2="45"
  />
  <line
    data-testid="pose-connection-0-2"
    opacity="0.9"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="100"
    x2="110"
    y1="50"
    y2="45"
  />
  <line
    data-testid="pose-connection-1-3"
    opacity="0.85"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="90"
    x2="80"
    y1="45"
    y2="50"
  />
  <line
    data-testid="pose-connection-2-4"
    opacity="0.85"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="110"
    x2="120"
    y1="45"
    y2="50"
  />
  <line
    data-testid="pose-connection-5-6"
    opacity="0.92"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="130"
    y1="100"
    y2="100"
  />
  <line
    data-testid="pose-connection-5-11"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="80"
    y1="100"
    y2="180"
  />
  <line
    data-testid="pose-connection-6-12"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="130"
    x2="120"
    y1="100"
    y2="180"
  />
  <line
    data-testid="pose-connection-11-12"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="80"
    x2="120"
    y1="180"
    y2="180"
  />
  <line
    data-testid="pose-connection-5-7"
    opacity="0.88"
    stroke="#3b82f6"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="60"
    y1="100"
    y2="150"
  />
  <line
    data-testid="pose-connection-7-9"
    opacity="0.82"
    stroke="#3b82f6"
    stroke-linecap="round"
    stroke-width="2"
    x1="60"
    x2="50"
    y1="150"
    y2="200"
  />
  <line
    data-testid="pose-connection-6-8"
    opacity="0.88"
    stroke="#8b5cf6"
    stroke-linecap="round"
    stroke-width="2"
    x1="130"
    x2="140"
    y1="100"
    y2="150"
  />
  <line
    data-testid="pose-connection-8-10"
    opacity="0.82"
    stroke="#8b5cf6"
    stroke-linecap="round"
    stroke-width="2"
    x1="140"
    x2="150"
    y1="150"
    y2="200"
  />
  <line
    data-testid="pose-connection-11-13"
    opacity="0.85"
    stroke="#ef4444"
    stroke-linecap="round"
    stroke-width="2"
    x1="80"
    x2="75"
    y1="180"
    y2="250"
  />
  <line
    data-testid="pose-connection-13-15"
    opacity="0.8"
    stroke="#ef4444"
    stroke-linecap="round"
    stroke-width="2"
    x1="75"
    x2="70"
    y1="250"
    y2="320"
  />
  <line
    data-testid="pose-connection-12-14"
    opacity="0.85"
    stroke="#f97316"
    stroke-linecap="round"
    stroke-width="2"
    x1="120"
    x2="125"
    y1="180"
    y2="250"
  />
  <line
    data-testid="pose-connection-14-16"
    opacity="0.8"
    stroke="#f97316"
    stroke-linecap="round"
    stroke-width="2"
    x1="125"
    x2="130"
    y1="250"
    y2="320"
  />
  <circle
    cx="100"
    cy="50"
    data-testid="pose-keypoint-0"
    fill="#22c55e"
    opacity="0.95"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="90"
    cy="45"
    data-testid="pose-keypoint-1"
    fill="#22c55e"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="110"
    cy="45"
    data-testid="pose-keypoint-2"
    fill="#22c55e"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="80"
    cy="50"
    data-testid="pose-keypoint-3"
    fill="#22c55e"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="120"
    cy="50"
    data-testid="pose-keypoint-4"
    fill="#22c55e"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="70"
    cy="100"
    data-testid="pose-keypoint-5"
    fill="#eab308"
    opacity="0.92"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="130"
    cy="100"
    data-testid="pose-keypoint-6"
    fill="#eab308"
    opacity="0.92"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="60"
    cy="150"
    data-testid="pose-keypoint-7"
    fill="#3b82f6"
    opacity="0.88"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="140"
    cy="150"
    data-testid="pose-keypoint-8"
    fill="#8b5cf6"
    opacity="0.88"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="50"
    cy="200"
    data-testid="pose-keypoint-9"
    fill="#3b82f6"
    opacity="0.82"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="150"
    cy="200"
    data-testid="pose-keypoint-10"
    fill="#8b5cf6"
    opacity="0.82"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="80"
    cy="180"
    data-testid="pose-keypoint-11"
    fill="#eab308"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="120"
    cy="180"
    data-testid="pose-keypoint-12"
    fill="#eab308"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="75"
    cy="250"
    data-testid="pose-keypoint-13"
    fill="#ef4444"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="125"
    cy="250"
    data-testid="pose-keypoint-14"
    fill="#f97316"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="70"
    cy="320"
    data-testid="pose-keypoint-15"
    fill="#ef4444"
    opacity="0.8"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="130"
    cy="320"
    data-testid="pose-keypoint-16"
    fill="#f97316"
    opacity="0.8"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
</svg>
`;

exports[`PoseSkeletonOverlay snapshots > renders with high confidence filter 1`] = `
<svg
  class="pointer-events-none absolute inset-0 h-full w-full"
  data-testid="pose-skeleton-overlay"
  preserveAspectRatio="none"
  style="z-index: 20;"
  viewBox="0 0 400 400"
>
  <line
    data-testid="pose-connection-0-1"
    opacity="0.9"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="100"
    x2="90"
    y1="50"
    y2="45"
  />
  <line
    data-testid="pose-connection-0-2"
    opacity="0.9"
    stroke="#22c55e"
    stroke-linecap="round"
    stroke-width="2"
    x1="100"
    x2="110"
    y1="50"
    y2="45"
  />
  <line
    data-testid="pose-connection-5-6"
    opacity="0.92"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="130"
    y1="100"
    y2="100"
  />
  <line
    data-testid="pose-connection-5-11"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="70"
    x2="80"
    y1="100"
    y2="180"
  />
  <line
    data-testid="pose-connection-6-12"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="130"
    x2="120"
    y1="100"
    y2="180"
  />
  <line
    data-testid="pose-connection-11-12"
    opacity="0.9"
    stroke="#eab308"
    stroke-linecap="round"
    stroke-width="2"
    x1="80"
    x2="120"
    y1="180"
    y2="180"
  />
  <circle
    cx="100"
    cy="50"
    data-testid="pose-keypoint-0"
    fill="#22c55e"
    opacity="0.95"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="90"
    cy="45"
    data-testid="pose-keypoint-1"
    fill="#22c55e"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="110"
    cy="45"
    data-testid="pose-keypoint-2"
    fill="#22c55e"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="70"
    cy="100"
    data-testid="pose-keypoint-5"
    fill="#eab308"
    opacity="0.92"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="130"
    cy="100"
    data-testid="pose-keypoint-6"
    fill="#eab308"
    opacity="0.92"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="80"
    cy="180"
    data-testid="pose-keypoint-11"
    fill="#eab308"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="120"
    cy="180"
    data-testid="pose-keypoint-12"
    fill="#eab308"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
</svg>
`;

exports[`PoseSkeletonOverlay snapshots > renders with keypoints only (no connections) 1`] = `
<svg
  class="pointer-events-none absolute inset-0 h-full w-full"
  data-testid="pose-skeleton-overlay"
  preserveAspectRatio="none"
  style="z-index: 20;"
  viewBox="0 0 400 400"
>
  <circle
    cx="100"
    cy="50"
    data-testid="pose-keypoint-0"
    fill="#22c55e"
    opacity="0.95"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="90"
    cy="45"
    data-testid="pose-keypoint-1"
    fill="#22c55e"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="110"
    cy="45"
    data-testid="pose-keypoint-2"
    fill="#22c55e"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="80"
    cy="50"
    data-testid="pose-keypoint-3"
    fill="#22c55e"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="120"
    cy="50"
    data-testid="pose-keypoint-4"
    fill="#22c55e"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="70"
    cy="100"
    data-testid="pose-keypoint-5"
    fill="#eab308"
    opacity="0.92"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="130"
    cy="100"
    data-testid="pose-keypoint-6"
    fill="#eab308"
    opacity="0.92"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="60"
    cy="150"
    data-testid="pose-keypoint-7"
    fill="#3b82f6"
    opacity="0.88"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="140"
    cy="150"
    data-testid="pose-keypoint-8"
    fill="#8b5cf6"
    opacity="0.88"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="50"
    cy="200"
    data-testid="pose-keypoint-9"
    fill="#3b82f6"
    opacity="0.82"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="150"
    cy="200"
    data-testid="pose-keypoint-10"
    fill="#8b5cf6"
    opacity="0.82"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="80"
    cy="180"
    data-testid="pose-keypoint-11"
    fill="#eab308"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="120"
    cy="180"
    data-testid="pose-keypoint-12"
    fill="#eab308"
    opacity="0.9"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="75"
    cy="250"
    data-testid="pose-keypoint-13"
    fill="#ef4444"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="125"
    cy="250"
    data-testid="pose-keypoint-14"
    fill="#f97316"
    opacity="0.85"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="70"
    cy="320"
    data-testid="pose-keypoint-15"
    fill="#ef4444"
    opacity="0.8"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
  <circle
    cx="130"
    cy="320"
    data-testid="pose-keypoint-16"
    fill="#f97316"
    opacity="0.8"
    r="4"
    stroke="#ffffff"
    stroke-width="1"
  />
</svg>
`;
